# telemark

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: main.tsx
client/src/app/: app-root.tsx  index.sass
client/src/components/: page-header.sass  page-header.tsx
client/src/hooks/: use-socketio.ts
client/src/routes/: index.route.sass  index.route.tsx
server/: pyproject.toml  tasks.py
server/lib/: authentication.py  authorization.py  result_object.py  td_client.py  td_event_loop.py  td_json.py  td_util.py
server/server/: __init__.py  socket_connection.py
