[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["sneikki <nvarvikko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
invoke = "^2.2.0"
python-socketio = {extras = ["asyncio"], version = "^5.11.4"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
